@@ -306,4 +306,3 @@ copiar un soundfont (de aqui por ejemplo http://www.schristiancollins.com/genera
 
 -al hacer alt-tab para ir a otra ventana, al volver con raton por ejemplo, el alt "sigue pulsado" en ZEsarUX
 
--iconos process management y process switcher quiza no serian hojas como de link
