@@ -670,6 +670,7 @@ extern int util_parse_commands_argvc(char *texto, char *parm_argv[], int maximo)
 extern int util_parse_commands_argvc_comillas(char *texto, char *parm_argv[], int maximo);
 
 extern int get_machine_id_by_name(char *machine_name);
+extern void get_machine_list_whitespace(void);
 
 extern void util_truncate_file(char *filename);
 
